<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="3">

        <TextView
            android:id="@+id/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account"
            android:padding="@dimen/margin"
            android:textColor="#81D4FA"
            android:textSize="@dimen/medium_text"
            android:layout_margin="@dimen/margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <EditText
            android:id="@+id/first_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textMultiLine"
            android:layout_margin="@dimen/margin"/>
        <EditText
            android:id="@+id/last_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textMultiLine"
            android:layout_margin="@dimen/margin"/>
        <EditText
            android:id="@+id/email_id_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:layout_margin="@dimen/margin"/>
        <EditText
            android:id="@+id/phone_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_margin="@dimen/margin"/>
        <EditText
            android:id="@+id/password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_margin="@dimen/margin"/>
        <EditText
            android:id="@+id/confirm_password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Confirm_password"
            android:inputType="textPassword"
            android:layout_margin="@dimen/margin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="3">
        <Button
            android:id="@+id/signn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sign_Up"
            android:layout_margin="@dimen/margin"/>
    </LinearLayout>

</LinearLayout>