<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:padding="@dimen/margin"
                android:text="@string/sell_book"
                android:textColor="#8E24AA"
                android:textSize="@dimen/large_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/form_for_selling_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/book_name"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/form_for_selling_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/author_name"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_image"
                android:textSize="@dimen/small_text"/>

            <ImageView
                android:id="@+id/form_for_selling_add_image"
                android:layout_width="@dimen/ex_ex_large_margin"
                android:layout_height="@dimen/ex_ex_large_margin"
                android:layout_margin="@dimen/margin"
                android:layout_gravity="center"
                android:src="@drawable/boi"
                />


            <EditText
                android:id="@+id/form_for_selling_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/price"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/form_for_selling_book_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/type_of_book"
                android:inputType="textMultiLine" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/form_for_selling_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:background="#8E24AA"
                android:text="@string/add"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>