<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/show_book_to_order_bookName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large_margin"
            android:text="@string/book_name"
            android:paddingBottom="10dp"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/show_book_to_order_bookWriter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:text="@string/author_name"
            android:paddingBottom="10dp"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/show_book_to_order_bookPic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="20dp"
            android:layout_gravity="center"
            android:src="@drawable/boi" />



        <TextView
            android:id="@+id/show_book_to_order_bookPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/price"
            android:textSize="24sp" />

        <Button
            android:id="@+id/advertise_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_gravity="center"
            android:layout_margin="@dimen/large_margin"
            android:background="#8E24AA"
            android:textColor="#FFFFFF"

            />

    </LinearLayout>
</ScrollView>