<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_account_circle_black_48dp"
            />


        <ImageView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_exit_to_app_black_48dp"
            />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@color/cardview_dark_background"
            android:textSize="@dimen/large_text"

            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:text="@string/select"
            android:textColor="@color/cardview_dark_background"
            android:textSize="@dimen/medium_text" />

        <Button
            android:id="@+id/buy_books"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_margin="10dp"
            android:text="@string/buy_book"
            android:background="@color/floting_color"/>

        <Button
            android:id="@+id/sell_books"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:text="@string/sell_book"
            android:background="@color/floting_color"
            />


    </LinearLayout>

</LinearLayout>

</ScrollView>